Actualización de diseño y nuevas páginas (indicadores y reservar)

--- a/equipamiento.html
+++ b/equipamiento.html
@@ -25,6 +25,22 @@
       <a href="equipamiento.html" class="text-blue-700 font-semibold transition">Equipamiento</a>
       <a href="laboratorios.html" class="text-gray-700 hover:text-blue-700 transition">Laboratorios</a>
       <a href="contacto.html" class="text-gray-700 hover:text-blue-700 transition">Contacto</a>
+
+      <!-- MENÚ DESPLEGABLE "OTROS" -->
+      <div class="relative group">
+        <button class="text-gray-700 hover:text-blue-700 transition flex items-center">
+          Otros
+          <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2"
+               viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+               <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
+          </svg>
+        </button>
+        <div class="absolute hidden group-hover:block bg-white shadow-lg border rounded-md mt-2 w-56">
+          <a href="indicadores.html" class="block px-4 py-2 hover:bg-blue-50 text-gray-700">Indicadores</a>
+          <a href="reservar.html" class="block px-4 py-2 hover:bg-blue-50 text-gray-700">Reservar hora Laboratorio y Equipamiento</a>
+        </div>
+      </div>
+
       <a href="servicios.html" class="bg-gradient-to-r from-blue-700 to-cyan-600 text-white px-4 py-2 rounded shadow-md hover:shadow-lg transition">Solicitar Servicio</a>
     </nav>
   </div>
