Ajustes nuevos maqueta html

--- a/lared.html
+++ b/lared.html
@@ -261,7 +261,7 @@
 
     <!-- Miembro 1 -->
     <div class="flex flex-col items-center text-center">
-      <img src="img/equipo/equipo-2.JPG" alt="Analia Radl" class="h-32 w-32 rounded-full mb-4">
+      <img src="img/equipo/equipo-2.png" alt="Analia Radl" class="h-32 w-32 rounded-full mb-4">
       <p class="font-semibold mb-4 text-[#0039cc]">Analia Radl</p>
       <p class="text-gray-800 text-sm">Facultad de Ciencias Naturales, Matemáticas y del Medio Ambiente</p>
       <p class="font-semibold text-[#0039cc] text-sm">aradl@utem.cl</p>
@@ -269,7 +269,7 @@
 
     <!-- Miembro 2 -->
     <div class="flex flex-col items-center text-center">
-      <img src="img/equipo/equipo-3.JPG" alt="Constanza Carcamo" class="h-32 w-32 rounded-full mb-4">
+      <img src="img/equipo/equipo-3.png" alt="Constanza Carcamo" class="h-32 w-32 rounded-full mb-4">
       <p class="font-semibold mb-4 text-[#0039cc]">Constanza Carcamo</p>
       <p class="text-gray-800 text-sm">Facultad de Administración y Economía / Facultad de Humanidades y Tecnologías de las Ciencias Sociales / Facultad de Ciencias Jurídicas y Sociales</p>
       <p class="font-semibold text-[#0039cc] text-sm">ccarcamo@utem.cl</p>
@@ -277,7 +277,7 @@
 
     <!-- Miembro 3 -->
     <div class="flex flex-col items-center text-center">
-      <img src="img/equipo/equipo-4.JPG" alt="Edison Matamala" class="h-32 w-32 rounded-full mb-4">
+      <img src="img/equipo/equipo-4.png" alt="Edison Matamala" class="h-32 w-32 rounded-full mb-4">
       <p class="font-semibold mb-4 text-[#0039cc]">Edison Matamala</p>
       <p class="text-gray-800 text-sm">Facultad de Ciencias de la Construcción y Ordenamiento Territorial</p>
       <p class="font-semibold text-[#0039cc] text-sm">ematamala@utem.cl</p>
@@ -285,7 +285,7 @@
 
     <!-- Miembro 4 -->
     <div class="flex flex-col items-center text-center">
-      <img src="img/equipo/equipo-5.jpg" alt="Lily Sepúlveda" class="h-32 w-32 rounded-full mb-4">
+      <img src="img/equipo/equipo-4.png" alt="Lily Sepúlveda" class="h-32 w-32 rounded-full mb-4">
       <p class="font-semibold mb-4 text-[#0039cc]">Lily Sepúlveda</p>
       <p class="text-gray-800 text-sm">Facultad de Ingeniería</p>
       <p class="font-semibold text-[#0039cc] text-sm">isepulveda@utem.cl</p>
